updated to current beta version of nats.ws

--- a/content/index.html
+++ b/content/index.html
@@ -9,6 +9,5 @@
 <div class="container" id="log">
 </div>
 </body>
-<script src="nats.js"></script>
-<script src="index.js"></script>
+<script type="module" src="index.js"></script>
 </html>
